--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,10 +2,12 @@
 <!DOCTYPE html>
 <html>
 
-<head><link rel="stylesheet" type="text/css" href="css/style.css">
+<head>
+  <title>Gato Malo</title>
+  <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 
-<title>Gato Malo</title>
+
 
 <body>
 <h1>Gato Malo</h1>
