--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -17,7 +17,7 @@
 	</div>
 	<div id="slogan">
 		<h2>Fishing for more traffic to your business?</h2>
-		<p>Let us give you the (click) bait</p>
+		<h2>Let us give you the (click) bait</h2>
 		<p>Gato Malo is a boutique social media marketing agency. Need more website hits, Facebook likes and repins? We have the purrfect solution for your business.</p>
 	</div>
 	<div id="footer">
