--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Gato Malo</title>
-	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<link rel="stylesheet" type="text/css" href="CSS/style.css"/>
 </head>
 <body>
 	<div id="header">
@@ -18,7 +18,9 @@
 	<div id="slogan">
 		<h2>Fishing for more traffic to your business?</h2>
 		<h2>Let us give you the (click) bait</h2>
-		<p>Gato Malo is a boutique social media marketing agency. Need more website hits, Facebook likes and repins? We have the purrfect solution for your business.</p>
+		<p>Gato Malo is a boutique social media marketing agency.</p>
+		<p>Need more website hits, Facebook likes and repins?</p>
+		<p>We have the purrfect solution for your business.</p>
 	</div>
 	<div id="footer">
 	</div>
