--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -2,28 +2,34 @@
 <html>
 <head>
 	<title>Gato Malo</title>
-	<link rel="stylesheet" type="text/css" href="CSS/style.css"/>
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 <body>
-	<div id="header">
-		<h1>GATO MALO</h1>
-		<ul>
-			<li><a href="#">HOME</a></li>
-			<li><a href="#">ABOUT</a></li>
-			<li><a href="#">PORTFOLIO</a></li>
-			<li><a href="#">SERVICES</a></li>
-			<li><a href="#">CONTACT</a></li>
-		</ul>
+	<header>
+		<p class="logo">GATO MALO</p>
+		<nav>
+			<a href="#">HOME</a>
+			<a href="#">ABOUT</a>
+			<a href="#">PORTFOLIO</a>
+			<a href="#">SERVICES</a>
+			<a href="#">CONTACT</a>
+		</nav>
+	</header>
+	<section id="intro">
+		<h1><span>Fishing for more traffic to your business?</span><br>Let us give you the (click) bait</h1>
+	</section>
+	<section id="about">
+		<h2>Gato Malo is a boutique social media marketing agency.</h2>
+	</section>
+	<section>
+		<h2>Need more website hits, Facebook likes and repins?</h2>
+	</section>
+	<section>
+		<h2>We have the purrfect solution for your business.</h2>
 	</div>
-	<div id="slogan">
-		<h2>Fishing for more traffic to your business?</h2>
-		<h2>Let us give you the (click) bait</h2>
-		<p>Gato Malo is a boutique social media marketing agency.</p>
-		<p>Need more website hits, Facebook likes and repins?</p>
-		<p>We have the purrfect solution for your business.</p>
-	</div>
-	<div id="footer">
-	</div>
-	<h4><a href="mailto:GatoMaloMarketing@123.com">Contact us at GatoMaloMarketing@123.com</a></h4>
+	<footer>
+		<h2>Get in touch</h2>
+		<a href="mailto:GatoMaloMarketing@123.com">Contact us at GatoMaloMarketing@123.com</a>
+	</footer>
 </body>
 </html>
