--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Gato Malo</title>
-	<link rel="stylesheet" type="text/css" href="CSS/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<header>
@@ -13,6 +13,12 @@
 			<a href="#">PORTFOLIO</a>
 			<a href="#">SERVICES</a>
 			<a href="#">CONTACT</a>
+		</nav>
+		<nav>
+			<a href="../Images/facebook.png"></a>
+			<a href="../Images/twitter.png"></a>
+			<a href="../Images/pinterest.png"></a>
+			<a href="../Images/twitter.png"></a>
 		</nav>
 	</header>
 	<section id="intro">
