--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -19,17 +19,17 @@
 		<h1><span>Fishing for more traffic to your business?</span><br>Let us give you the (click) bait</h1>
 	</section>
 	<section id="about">
-		<h2>Gato Malo is a boutique social media marketing agency.</h2>
+		<h2>Gato Malo is a boutique social media marketing agency. We specialize in driving traffic to small businesses via innovative use of social media platforms. We will optimize a branding strategy that reflects the heartbeat of your unique business.</h2>
 	</section>
 	<section>
-		<h2>Need more website hits, Facebook likes and repins?</h2>
+		<h2>Need more website hits, Facebook likes and repins? Let us connect you with customers already looking for your product.</h2>
 	</section>
 	<section>
-		<h2>We have the purrfect solution for your business.</h2>
+		<h2>We have the purrfect solution for your business. Take a look at our portfolio and service offerings, then contact us!</h2>
 	</div>
 	<footer>
 		<h2>Get in touch</h2>
-		<a href="mailto:GatoMaloMarketing@123.com">Contact us at GatoMaloMarketing@123.com</a>	
+		<a href="mailto:GatoMaloMarketing@123.com">Contact us at GatoMaloMarketing@123.com</a>
 	</footer>
 </body>
 </html>
