--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Gato Malo</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 <body>
 	<header>
@@ -12,7 +12,8 @@
 			<a href="#">ABOUT</a>
 			<a href="#">PORTFOLIO</a>
 			<a href="#">SERVICES</a>
-			<a href="#">CONTACT</a>
+			<a href="#">CONTACT</a>	
+			<a href="#"><img class="social" src="Images/facebook.png" /></a>
 		</nav>
 	</header>
 	<section id="intro">
