right side social nav

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -15,6 +15,9 @@
 			<a href="#">CONTACT</a>	
 			<a href="#"><img class="social" src="Images/facebook.png" /></a>
 		</nav>
+		<div class="socialWrap">
+			<a href="#"><img class="social" src="Images/facebook.png" /></a>
+		</div>
 	</header>
 	<section id="intro">
 		<h1><span>Fishing for more traffic to your business?</span><br>Let us give you the (click) bait</h1>
