--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title><gato malo</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 <body>
 	<header>
