--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -25,7 +25,7 @@
 	<section id="about">
 		<h2>Gato Malo is a boutique social media marketing agency. We specialize in driving traffic to small businesses via innovative use of social media platforms. We will optimize a branding strategy that reflects the heartbeat of your business. Just as every cat is unique, so is every business! We never utilize a one size fits all approach.</h2>
 	</section>
-	<section>
+	<section id="fish">
 		<h2>Need more website hits, Facebook likes and repins? Let us connect you with customers already looking for your product. You want to cast a wide net, but you have to know what school you're after and where they swim! We're expert anglers.</h2>
 	</section>
 	<section id="solution">
