--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title><gato malo</title>
 	<link rel="stylesheet" type="text/css" href="CSS/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
 	<header>
