--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -30,7 +30,7 @@
 		<h2>Need more website hits, Facebook likes and repins? Let us connect you with customers already looking for your product. You want to cast a wide net, but you have to know what school you're after and where they swim! We're expert anglers.</h2>
 	</section>
 	<section id="solution">
-		<h2>No matter your social media marketing needs, we have the purrfect soluion for your business. Take a look at our portfolio to view examples of our work. Our services section will give you an idea of the packages we can customize for you. Have a look around,then contact us! We promise to knock it off the table...er...out of the park.</h2>
+		<h2>No matter your social media marketing needs, we have the purrfect soluion for your business. Take a look at our portfolio to view examples of our work, then contact us! We promise to knock it off the table...er...out of the park.</h2>
 	</div>
 	<footer>
 		<h2>Get in touch</h2>
