--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -4,10 +4,10 @@
 	<title><gato malo</title>
 	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
 	<header>
-		<p class="logo">Gato Malo</p>
 		<nav>
 			<a href="#">HOME</a>
 			<a href="#">ABOUT</a>
