--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title><gato malo</title>
 	<link rel="stylesheet" type="text/css" href="CSS/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
+	
 </head>
 <body>
 	<header>
