--- a/unit_4/portfolio.html
+++ b/unit_4/portfolio.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title><gato malo</title>
@@ -19,3 +19,20 @@
 			<a href="https://www.twitter.com"><img class="social" src="Images/twitter.png" /></a>
 			<a href="https://www.instagram.com"><img class="social" src="Images/instagram.png" /></a>
 		</nav>
+	</header>
+	<section id="body">
+			<h1>This is where the content goes</h1>
+	</section>
+	<footer>
+		<h2>Get in touch</h2>
+		<a href="mailto:GatoMaloMarketing@123.com">Contact us at GatoMaloMarketing@123.com</a>
+		<nav>
+			<a href="https://www.facebook.com"><img class="social" src="Images/facebook.png" /></a>
+			<a href="https://www.pinterest.com"><img class="social" src="Images/pinterest.png" /></a>
+			<a href="https://www.twitter.com"><img class="social" src="Images/twitter.png" /></a>
+			<a href="https://www.instagram.com"><img class="social" src="Images/instagram.png" /></a>
+		</nav>
+
+	</footer>
+</body>
+</html>
