--- a/unit_4/portfolio.html
+++ b/unit_4/portfolio.html
@@ -21,7 +21,31 @@
 		</nav>
 	</header>
 	<section id="body">
-			<h1>This is where the content goes</h1>
+			<h1>Client case study: By the Way Bakery</h1>
+			<img src="Images/bakery.jpg" id="cookie">
+			<h2>Challenge</h2>
+			<p>Increase brand awareness, and position as the leading allergy friendly bakery in the Tri-state area. Build a social media presence that drives a significant profit return. </p>
+			<h2>Platforms</h2>
+			<ul>
+				<li>Pintest</li>
+				<li>Facebook</li>
+				<li>Instagram</li>
+				<li>Twitter</li>
+			</ul>
+			<h2>Goals</h2>
+			<ul>
+				<li>INSPIRE both new and existing customers to make purchases</li>
+				<li>LEVERAGE social fans into web traffic and paying customers</li>
+				<li>INCREASE intent to purchase by focusing on influencer campaigns</li>
+				<li>FOCUS on consumer sharing by increasing video and graphic content</li>
+			</ul>
+			<h2>Solution</h2>
+			<p>The teams at Gato Malo and By the Way Bakery aligned on expanding and diversifying the amount of content delivered to their customers each day to increase the probability of individuals taking action. Post content on Facebook and Instagram increased by 50-75% per day, allowing the team to better analyze each content type and the overall consumer reaction.</p>
+			<p>Both teams also worked diligently in aligning with bakery and allergen influencers on an ongoing #GlutenfreeNYC ambassador program to drive organic growth on channels like Instagram and Twitter. This content led to a boost in post engagement and shares, which further drove organic reach and acquisition.</p>
+			<p>Gato Malo continued to run isolated testing on the above sponsored content to ensure that By the Way Bakery's audience targets for ongoing and incoming customers were optimal for each advertisement being displayed. To further optimize for sales, Gato Malo keeps a close eye on high performers each month, and continually reallocates spend to advertisements with a low Cost Per Purchase.</p>
+			<h2>Result</h2>
+			<p>31.4% increase in community growth on Instagram from Jan-May 2016</p>
+			<p>4.5x ROI in Social Media Advertising from Jan-May 2016</p>
 	</section>
 	<footer>
 		<h2>Get in touch</h2>
