--- a/unit_4/portfolio.html
+++ b/unit_4/portfolio.html
@@ -22,7 +22,7 @@
 	</header>
 	<section id="body">
 			<h1>Client case study: By the Way Bakery</h1>
-			<img src="Images/bakery.jpg" id="cookie">
+			<img src="Images/Gluten free cupcakes from By The Way Bakery.jpg.jpg" id="cookie">
 			<h2>Challenge</h2>
 			<p>Increase brand awareness, and position as the leading allergy friendly bakery in the Tri-state area. Build a social media presence that drives a significant profit return. </p>
 			<h2>Platforms</h2>
