finished portfolio page content in html

--- a/unit_4/portfolio.html
+++ b/unit_4/portfolio.html
@@ -22,7 +22,7 @@
 	</header>
 	<section id="body">
 			<h1>Client case study: By the Way Bakery</h1>
-			<img src="Images/Gluten free cupcakes from By The Way Bakery.jpg.jpg" id="cookie">
+			<img src="Images/bytheway.jpg" id="cookie">
 			<h2>Challenge</h2>
 			<p>Increase brand awareness, and position as the leading allergy friendly bakery in the Tri-state area. Build a social media presence that drives a significant profit return. </p>
 			<h2>Platforms</h2>
@@ -46,6 +46,32 @@
 			<h2>Result</h2>
 			<p>31.4% increase in community growth on Instagram from Jan-May 2016</p>
 			<p>4.5x ROI in Social Media Advertising from Jan-May 2016</p>
+			<h2>Client Case Study: Skeptical Kitten</h2>
+			<img src="Images/skeptical.jpg">
+			<h2>Challenge</h2>
+			<p>Skeptical Kitten is a web platform that combats psuedo science via the use of cat memes, and is also a brand that offers various forms of merchandise for sale via a corresponding online marketplace. The brand partnered with Gato Malo to develop a strategy to increase brand awareness and drive social engagement.</p>
+			<h2>Platforms</h2>
+			<ul>
+				<li>Facebook</li>
+				<li>Instagram</li>
+				<li>Twitter</li>
+			</ul>
+			<h2>Goals</h2>
+			<ul>
+				<li>INSPIRE target audience to follow Skeptical Kitten on social media platforms</li>
+				<li>DRIVE social engagements between potential customers and Skeptical kitten</li>
+				<li>FOCUS on crafting compelling content to drive interactions and share across the digital space</li>
+			</ul>
+			<h2>Solution</h2>
+			<p>After a full redesign of Skeptical Kitten's social media, Gato Malo set out to increase engagement throughout the social space. Working closely with the brand, the Gato Malo team created visually compelling and comprehensive content to a variety of target markets based on customer research. This allowed Gato Malo to discern a target pattern for performance and adjust accordignly, including optimation of Facebook ads.</p>
+			<h2>Results</h2>
+			<ul>
+				<li>83% increase in community growth on Facebook</li>
+				<li>96% increase in community growth on Instagram</li>
+				<li>73% decrase in average cost per engagement spend</li>
+			</ul>
+
+
 	</section>
 	<footer>
 		<h2>Get in touch</h2>
