--- a/unit_4/portfolio.html
+++ b/unit_4/portfolio.html
@@ -46,8 +46,9 @@
 			<h2>Result</h2>
 			<p>31.4% increase in community growth on Instagram from Jan-May 2016</p>
 			<p>4.5x ROI in Social Media Advertising from Jan-May 2016</p>
-			<h2>Client Case Study: Skeptical Kitten</h2>
-			<img src="Images/skeptical.jpg">
+			<div id="second">
+			<h1>Client Case Study: Skeptical Kitten </h1>
+			<img src="Images/skeptical.jpg" id="kitten">
 			<h2>Challenge</h2>
 			<p>Skeptical Kitten is a web platform that combats psuedo science via the use of cat memes, and is also a brand that offers various forms of merchandise for sale via a corresponding online marketplace. The brand partnered with Gato Malo to develop a strategy to increase brand awareness and drive social engagement.</p>
 			<h2>Platforms</h2>
@@ -70,6 +71,7 @@
 				<li>96% increase in community growth on Instagram</li>
 				<li>73% decrase in average cost per engagement spend</li>
 			</ul>
+		</div>
 
 
 	</section>
