--- a/unit_5/portfolio.html
+++ b/unit_5/portfolio.html
@@ -21,59 +21,60 @@
 		</nav>
 	</header>
 	<section id="body">
-			<h1>Client case study: By the Way Bakery</h1>
+		<h1>Case Studies</h1>
+		<article>
+			<h2>Client case study: By the Way Bakery</h2>
 			<img src="Images/bytheway.jpg" id="cookie">
-			<h2>Challenge</h2>
+			<h3>Challenge</h3>
 			<p>Increase brand awareness, and position as the leading allergy friendly bakery in the Tri-state area. Build a social media presence that drives a significant profit return. </p>
-			<h2>Platforms</h2>
+			<h3>Platforms</h3>
 			<ul>
 				<li>Pintest</li>
 				<li>Facebook</li>
 				<li>Instagram</li>
 				<li>Twitter</li>
 			</ul>
-			<h2>Goals</h2>
+			<h3>Goals</h3>
 			<ul>
 				<li>INSPIRE both new and existing customers to make purchases</li>
 				<li>LEVERAGE social fans into web traffic and paying customers</li>
 				<li>INCREASE intent to purchase by focusing on influencer campaigns</li>
 				<li>FOCUS on consumer sharing by increasing video and graphic content</li>
 			</ul>
-			<h2>Solution</h2>
+			<h3>Solution</h3>
 			<p>The teams at Gato Malo and By the Way Bakery aligned on expanding and diversifying the amount of content delivered to their customers each day to increase the probability of individuals taking action. Post content on Facebook and Instagram increased by 50-75% per day, allowing the team to better analyze each content type and the overall consumer reaction.</p>
 			<p>Both teams also worked diligently in aligning with bakery and allergen influencers on an ongoing #GlutenfreeNYC ambassador program to drive organic growth on channels like Instagram and Twitter. This content led to a boost in post engagement and shares, which further drove organic reach and acquisition.</p>
 			<p>Gato Malo continued to run isolated testing on the above sponsored content to ensure that By the Way Bakery's audience targets for ongoing and incoming customers were optimal for each advertisement being displayed. To further optimize for sales, Gato Malo keeps a close eye on high performers each month, and continually reallocates spend to advertisements with a low Cost Per Purchase.</p>
-			<h2>Result</h2>
+			<h3>Result</h3>
 			<p>31.4% increase in community growth on Instagram from Jan-May 2016</p>
 			<p>4.5x ROI in Social Media Advertising from Jan-May 2016</p>
-			<div id="second">
-			<h1>Client Case Study: Skeptical Kitten </h1>
+		</article>
+		<article>
+			<h2>Client Case Study: Skeptical Kitten </h2>
 			<img src="Images/skeptical.jpg" id="kitten">
-			<h2>Challenge</h2>
+			<h3>Challenge</h3>
 			<p>Skeptical Kitten is a web platform that combats psuedo science via the use of cat memes, and is also a brand that offers various forms of merchandise for sale via a corresponding online marketplace. The brand partnered with Gato Malo to develop a strategy to increase brand awareness and drive social engagement.</p>
-			<h2>Platforms</h2>
+			<h3>Platforms</h3>
 			<ul>
 				<li>Facebook</li>
 				<li>Instagram</li>
 				<li>Twitter</li>
 			</ul>
-			<h2>Goals</h2>
+			<h3>Goals</h3>
 			<ul>
 				<li>INSPIRE target audience to follow Skeptical Kitten on social media platforms</li>
 				<li>DRIVE social engagements between potential customers and Skeptical kitten</li>
 				<li>FOCUS on crafting compelling content to drive interactions and share across the digital space</li>
 			</ul>
-			<h2>Solution</h2>
+			<h3>Solution</h3>
 			<p>After a full redesign of Skeptical Kitten's social media, Gato Malo set out to increase engagement throughout the social space. Working closely with the brand, the Gato Malo team created visually compelling and comprehensive content to a variety of target markets based on customer research. This allowed Gato Malo to discern a target pattern for performance and adjust accordignly, including optimation of Facebook ads.</p>
-			<h2>Results</h2>
+			<h3>Results</h3>
 			<ul>
 				<li>83% increase in community growth on Facebook</li>
 				<li>96% increase in community growth on Instagram</li>
 				<li>73% decrase in average cost per engagement spend</li>
 			</ul>
-		</div>
-
-
+		</article>
 	</section>
 	<footer>
 		<h2>Get in touch</h2>
