portfolio results html update

--- a/unit_5/portfolio.html
+++ b/unit_5/portfolio.html
@@ -69,11 +69,9 @@
 			<h3>Solution</h3>
 			<p>After a full redesign of Skeptical Kitten's social media, Gato Malo set out to increase engagement throughout the social space. Working closely with the brand, the Gato Malo team created visually compelling and comprehensive content to a variety of target markets based on customer research. This allowed Gato Malo to discern a target pattern for performance and adjust accordignly, including optimation of Facebook ads.</p>
 			<h3>Results</h3>
-			<ul>
-				<li>83% increase in community growth on Facebook</li>
-				<li>96% increase in community growth on Instagram</li>
-				<li>73% decrase in average cost per engagement spend</li>
-			</ul>
+				<p></p>>83% increase in community growth on Facebook</p>
+				<p></p>>96% increase in community growth on Instagram</p>
+				<p></p>>73% decrase in average cost per engagement spend</p>
 		</article>
 	</section>
 	<footer>
