--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -22,7 +22,7 @@
 	</header>
 	<section id="intro">
 		<h1><span>Fishing for more traffic to your business?</span><br>Let us give you the (click) bait</h1>
-		<a href="mailto:GatoMaloMarketing@123.com"><img src="Images/consult.png"></a>
+		<span class="cta">Click here to schedule your free consultation</span>
 	</section>
 	<section id="about">
 		<h2>Gato Malo is a boutique social media marketing agency. We specialize in driving traffic to small businesses via innovative use of social media platforms. We will optimize a branding strategy that reflects the heartbeat of your business. Just as every cat is unique, so is every business! We never utilize a one size fits all approach.</h2>
@@ -33,16 +33,17 @@
 	<section id="solution">
 		<h2>No matter your social media marketing needs, we have the purrfect soluion for your business. Take a look at our portfolio to view examples of our work, then contact us! We promise to knock it off the table...er...out of the park.</h2>
 	</div>
-	<footer>
+	<section id="bottom">
 		<h2>Get in touch</h2>
 		<a href="mailto:GatoMaloMarketing@123.com">Contact us at GatoMaloMarketing@123.com</a>
+	</section>
+		<footer>
 		<nav>
 			<a href="https://www.facebook.com"><img class="social" src="Images/facebook.png" /></a>
 			<a href="https://www.pinterest.com"><img class="social" src="Images/pinterest.png" /></a>
 			<a href="https://www.twitter.com"><img class="social" src="Images/twitter.png" /></a>
 			<a href="https://www.instagram.com"><img class="social" src="Images/instagram.png" /></a>
 		</nav>
-
-	</footer>
+		</footer>
 </body>
 </html>
