--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -22,7 +22,7 @@
 	</header>
 	<section id="intro">
 		<h1><span>Fishing for more traffic to your business?</span><br>Let us give you the (click) bait</h1>
-		<span class="cta">Click here to schedule your free consultation</span>
+		<button type="button">Contact us for a free consultation!</button>
 	</section>
 	<section id="about">
 		<h2>Gato Malo is a boutique social media marketing agency. We specialize in driving traffic to small businesses via innovative use of social media platforms. We will optimize a branding strategy that reflects the heartbeat of your business. Just as every cat is unique, so is every business! We never utilize a one size fits all approach.</h2>
