example for columns

--- a/unit_5/portfolio.html
+++ b/unit_5/portfolio.html
@@ -22,9 +22,10 @@
 	</header>
 	<section id="body">
 		<h1>Case Studies</h1>
-		<article>
+		<article class="clientwrapper">
 			<h2>Client case study: By the Way Bakery</h2>
 			<img src="Images/bytheway.jpg" id="cookie">
+		    <div class="storyleft">
 			<h3>Challenge</h3>
 			<p>Increase brand awareness, and position as the leading allergy friendly bakery in the Tri-state area. Build a social media presence that drives a significant profit return. </p>
 			<h3>Platforms</h3>
@@ -37,7 +38,8 @@
 				<li>INCREASE intent to purchase by focusing on influencer campaigns</li>
 				<li>FOCUS on consumer sharing by increasing video and graphic content</li>
 			</ul>
-		
+		    </div><!-- end left --> 
+		    <div class="storyright">
 			<h3>Solution</h3>
 			<p>The teams at Gato Malo and By the Way Bakery aligned on expanding and diversifying the amount of content delivered to their customers each day to increase the probability of individuals taking action. Post content on Facebook and Instagram increased by 50-75% per day, allowing the team to better analyze each content type and the overall consumer reaction.</p>
 			<p>Both teams also worked diligently in aligning with bakery and allergen influencers on an ongoing #GlutenfreeNYC ambassador program to drive organic growth on channels like Instagram and Twitter. This content led to a boost in post engagement and shares, which further drove organic reach and acquisition.</p>
@@ -45,6 +47,7 @@
 			<h3>Result</h3>
 			<p>31.4% increase in community growth on Instagram from Jan-May 2016</p>
 			<p>4.5x ROI in Social Media Advertising from Jan-May 2016</p>
+		    </div> <!-- end right --> 
 		</article>
 		<article>
 			<h2>Client Case Study: Skeptical Kitten </h2>
