--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -18,11 +18,12 @@
 			<a href="https://www.pinterest.com"><img class="social" src="Images/pinterest.png" /></a>
 			<a href="https://www.twitter.com"><img class="social" src="Images/twitter.png" /></a>
 			<a href="https://www.instagram.com"><img class="social" src="Images/instagram.png" /></a>
+			<img src="images/logo.jpg" class="logoimage">
 		</nav>
 	</header>
 	<section id="intro">
 		<h1><span>Fishing for more traffic to your business?</span><br>Let us give you the (click) bait</h1>
-		<button class="callAct" type="button">Contact us for a free consultation!</button>
+		<button class="callAct" type="button"></a>Contact us for a free consultation!</button>
 	</section>
 	<section id="about">
 		<h2>Gato Malo is a boutique social media marketing agency. We specialize in driving traffic to small businesses via innovative use of social media platforms. We will optimize a branding strategy that reflects the heartbeat of your business. Just as every cat is unique, so is every business! We never utilize a one size fits all approach.</h2>
