content update portfolio html

--- a/unit_5/portfolio.html
+++ b/unit_5/portfolio.html
@@ -72,7 +72,7 @@
 		</div><!--end left-->
 		<div class="storyright">
 			<h3>Solution</h3>
-			<p>After a full redesign of Skeptical Kitten's social media, Gato Malo set out to increase engagement throughout the social space. Working closely with the brand, the Gato Malo team created visually compelling and comprehensive content to a variety of target markets based on customer research. This allowed Gato Malo to discern a target pattern for performance and adjust accordignly, including optimation of Facebook ads.</p>
+			<p>After a full redesign of Skeptical Kitten's social media pages, Gato Malo set out to increase engagement throughout the social space by creating a mutli faceted campaign. Working closely with the brand, the Gato Malo team created visually compelling and comprehensive content to a variety of target markets based on customer research. This allowed Gato Malo to discern a target pattern for performance and adjust accordingly, including optimization of Facebook ads. Increased site traffic directly correlated to an increase in merchandise sales with a lower overall marketing spend per transaction.</p>
 			<h3>Results</h3>
 				<p>83% increase in community growth on Facebook</p>
 				<p>96% increase in community growth on Instagram</p>
