centered image and added border

--- a/unit_5/portfolio.html
+++ b/unit_5/portfolio.html
@@ -21,7 +21,7 @@
 		</nav>
 	</header>
 	<section id="body">
-		<h1>Case Studies</h1>
+		<h1>Client Case Studies</h1>
 		<article class="clientwrapper">
 			<h2>Client case study: By the Way Bakery</h2>
 			<img src="Images/bytheway.jpg" id="cookie">
@@ -51,9 +51,10 @@
 			<p>4.5x ROI in Social Media Advertising from Jan-May 2016</p>
 		    </div> <!-- end right --> 
 		</article>
+		<h1>Client Case Studies</h1>
 		<article class="clientwrapper">
 			<h2>Client Case Study: Skeptical Kitten </h2>
-			<img src="Images/skeptical.jpg" id="kitten">
+			<div align="center"><img src="Images/skeptical.jpg" id="kitten"></div>
 			<div class="storyleft">
 			<h3>Challenge</h3>
 			<p>Skeptical Kitten is a web platform that combats psuedo science via the use of cat memes, and is also a brand that offers various forms of merchandise for sale via a corresponding online marketplace. The brand partnered with Gato Malo to develop a strategy to increase brand awareness and drive social engagement.</p>
