--- a/unit_5/portfolio.html
+++ b/unit_5/portfolio.html
@@ -47,8 +47,8 @@
 			<p>The teams at Gato Malo and By the Way Bakery aligned on expanding and diversifying the amount of content delivered to their customers each day to increase the probability of individuals taking action. Post content on Facebook and Instagram increased by 50-75% per day.</p>
 			<p>Both teams also worked diligently in aligning with bakery and allergen influencers on an ongoing #GlutenfreeNYC ambassador program to drive organic growth on channels like Instagram and Twitter. This content led to a boost in post engagement and shares, which further drove organic reach and acquisition.</p>
 			<h3>Result</h3>
-			<p>31.4% increase in community growth on Instagram from Jan-May 2016</p>
-			<p>4.5x ROI in Social Media Advertising from Jan-May 2016</p>
+			<p>31.4% increase in community growth on Instagram Jan-May 2016</p>
+			<p>4.5x ROI in Social Media Advertising Jan-May 2016</p>
 		    </div> <!-- end right --> 
 		</article>
 		<h1>Client Case Studies</h1>
@@ -57,7 +57,7 @@
 			<div align="center"><img src="Images/skeptical.jpg" id="kitten"></div>
 			<div class="storyleft">
 			<h3>Challenge</h3>
-			<p>Skeptical Kitten is a web platform that combats psuedo science via the use of cat memes, and is also a brand that offers various forms of merchandise for sale via a corresponding online marketplace. The brand partnered with Gato Malo to develop a strategy to increase brand awareness and drive social engagement.</p>
+			<p>Skeptical Kitten is a web platform that combats psuedo science using cat memes, and is also a brand that offers various forms of merchandise for sale via a corresponding online marketplace. The brand partnered with Gato Malo to develop a strategy to increase brand awareness and drive social engagement.</p>
 			<h3>Platforms</h3>
 			<ul>
 				<li>Facebook</li>
