--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -18,7 +18,7 @@
 			<a href="https://www.pinterest.com"><img class="social" src="Images/pinterest.png" /></a>
 			<a href="https://www.twitter.com"><img class="social" src="Images/twitter.png" /></a>
 			<a href="https://www.instagram.com"><img class="social" src="Images/instagram.png" /></a>
-			<img src="Images/logo.jpg" width="100" class="logoimage">
+			<a href="<img src="Images/logo.jpg" width="100" class="logoimage" /></a>
 		</nav>
 	</header>
 	<section id="intro">
