took out extra div, closed section

--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -33,7 +33,7 @@
 	</section>
 	<section id="solution">
 		<h2>No matter your social media marketing needs, we have the purrfect soluion for your business. Take a look at our portfolio to view examples of our work, then contact us! We promise to knock it off the table...er...out of the park.</h2>
-	</div>
+	</section>
 	<section id="bottom">
 		<h2>Get in touch</h2>
 		<a href="mailto:GatoMaloMarketing@123.com">Contact us at GatoMaloMarketing@123.com</a>
