fixed logo and button

--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -23,7 +23,7 @@
 	</header>
 	<section id="intro">
 		<h1><span>Fishing for more traffic to your business?</span><br>Let us give you the (click) bait</h1>
-		<button class="callAct" type="button"><a href="mailto:info@gatomalomarketing.com"</a></a>Contact us for a free consultation!</button>
+		<button class="callAct" type="button"><a href="mailto:info@gatomalomarketing.com">Contact us for a free consultation!</a></button>
 	</section>
 	<section id="about">
 		<h2>Gato Malo is a boutique social media marketing agency. We specialize in driving traffic to small businesses via innovative use of social media platforms. We will optimize a branding strategy that reflects the heartbeat of your business. Just as every cat is unique, so is every business! We never utilize a one size fits all approach.</h2>
