--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title><gato malo</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 	
